# totalrecall

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.mem0.yml  docker-compose.override.yml  docker-compose.yml  product_idea.md  pyproject.toml
docker/: entrypoint.sh  mem0-api.Dockerfile  mem0-init-db.sh  nginx.conf
migrations/: 0001_initial.sql  0002_catalogue_governance.sql  0003_learning_discoveries.sql  0004_context_snapshots.sql  0005_context_snapshots_columns.sql  0006_context_snapshots_drop_payload.sql  0007_skill_governance.sql  0008_provider_mappings.sql  0009_pgvector_rag.sql
skills/: playwright_typescript.json  pytest_python.json
tests/: conftest.py
tests/contract/: test_mem0_wrapper_contract.py  test_memory_wrapper.py  test_playwright_worker_contract.py
tests/golden/: test_prompt_golden.py  test_token_benchmarks.py
tests/integration/: test_api_foundation.py  test_cache_invalidation.py  test_catalogue_api.py  test_context_snapshot.py  test_database_migrations.py  test_generations_api.py  test_learning_api.py  test_mem0_docker_overlay.py  test_mem0_live_adapter.py  test_memory_delete_api.py  test_memory_service_app.py  test_metrics_endpoint.py  test_monitoring_api.py  test_rate_limit_api.py  test_runtime_credentials_api.py  test_skill_governance_api.py
tests/security/: test_tenant_isolation.py
tests/ui/: test_admin_ui_scaffold.py
tests/unit/: test_api_dependencies.py  test_auth.py  test_cli.py  test_context_planner.py  test_contract_models.py  (+41 more)
totalrecall/: contracts.py  errors.py  main.py
(+118 files in other folders)
