[project]
name = "totalrecall"
version = "0.1.0"
description = "Context-driven test automation architecture and orchestration service."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "asyncpg>=0.30.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "mem0ai>=2.0.2",
  "numpy>=1.26",
  "psycopg2-binary>=2.9",
  "pydantic-settings>=2.6.0",
  "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-httpx>=0.30",
  "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "postgres: requires local Postgres",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[project.scripts]
totalrecall = "totalrecall.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
